objects/AVA__App_Log__c.object
<CustomObject>
    <fields>
        <fullName>AVA__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__Message__c</fullName>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA__Organization_Id__c</fullName>
        <formula>$Organization.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__Origin__c</fullName>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__Process__c</fullName>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>App Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>App Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>